feat: atualizar ícones e adicionar instruções para o Copilot

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <meta name="format-detection" content="telephone=no" />
     
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/vetor_belz_conecta.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/vetor_belz_conecta.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/vetor_belz_conecta.png" />
+    <link rel="icon" type="image/x-icon" href="/vetor_belz_conecta.ico" />
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="/vetor_belz_conecta.ico" />
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="/vetor_belz_conecta.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/vetor_belz_conecta.ico" />
     <link rel="manifest" href="/site.webmanifest" />
     
     <!-- Schema.org JSON-LD -->
