feat: implementar lazy loading para componentes do quiz e otimizar carregamento de imagens

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="format-detection" content="telephone=no" />
     
-    <!-- Favicon -->
+  <!-- Preloads críticos (imagem hero mobile/desktop e logo) -->
+  <link rel="preload" as="image" href="/quiz-background-4.png" media="(max-width: 639px)" />
+  <link rel="preload" as="image" href="/quiz-background.png" media="(min-width: 640px)" />
+  <link rel="preload" as="image" href="/Conecta-Saude.png" />
+
+  <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/vetor_belz_conecta.ico" />
   <link rel="icon" type="image/x-icon" sizes="32x32" href="/vetor_belz_conecta.ico" />
   <link rel="icon" type="image/x-icon" sizes="16x16" href="/vetor_belz_conecta.ico" />
