fix: adicionar "qualidade de vida" às palavras-chave do SEO

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         "name": "Belz Conecta Saúde",
         "url": "https://belzconectasaude.vercel.app/"
       },
-      "keywords": "ergonomia, quiz, saúde ocupacional, postura, trabalho, bem-estar",
+      "keywords": "ergonomia, quiz, saúde ocupacional, postura, trabalho, bem-estar, qualidade de vida",
       "inLanguage": "pt-BR",
       "isAccessibleForFree": true
     }
